syntax = "proto3";
package ETModel;

message Player_Info_Base //IMessage
{
	int32 RpcId = 90;
	int64 PlayerId = 91;
	string NickName = 92;
}

message C2R_Login // IRequest
{
	int32 RpcId = 90;
	string	Account	 = 1;	// 帐号
	string	Password = 2;	// 密码
}

message R2C_Login // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	string Address = 1;
	int64 Key	    = 2;
}

message C2G_LoginGate // IRequest
{
	int32 RpcId = 90;
	int64 Key = 1;	// 帐号
}

message G2C_LoginGate // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	Player_Info_Base BaseInfo = 93;
	int64 PlayerId = 1;
}


message C2G_SendMsg // IMessage
{
	string Info = 1;
}

message G2C_TestHotfixMessage // IMessage
{
	string Info = 1;
}

message C2M_TestActorRequest // IActorRequest
{
	int32 RpcId = 90;
	int64 ActorId = 91;
	string Info = 1;
}

message M2C_TestActorResponse // IActorResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	string Info = 1;
}

message C2M_ReadyStartGame // IActorRequest
{
	int32 RpcId = 90;
	int64 ActorId = 91;
}

message M2C_ReadyStartGame // IActorResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
}

message PlayerInfo // IMessage
{
	int32 RpcId = 90;
}

message C2G_PlayerInfo // IRequest
{
	int32 RpcId = 90;
}

message G2C_PlayerInfo // IResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	PlayerInfo PlayerInfos = 1;
}

message OneFrameMessage // IActorMessage
{
	int32 RpcId = 90;
	int64 ActorId = 93;
	int32 Op = 1;
	bytes AMessage = 2;
}

message FrameMessage // IActorMessage
{
	int32 RpcId = 90;
	int64 ActorId = 93;

	int32 Frame = 1;
	repeated OneFrameMessage Message = 2;
}
